intel-integrations/soulsystem-integration/src/cli/snapshots/soulsystem__cli__tests__long_help_output.snap
---
source: src/cli/mod.rs
expression: help
---
SoulSystem is a secure AI assistant.

Getting started:
  soulsystem onboard              # Interactive setup wizard (recommended for first run)
  soulsystem onboard --quick      # Quick setup: just pick a provider and model
  soulsystem models set-provider openai  # Switch to a specific provider
  soulsystem doctor               # Check your configuration

Common commands:
  soulsystem run                  # Start the agent
  soulsystem config list          # View all settings
  soulsystem models status        # Show current provider and model
  soulsystem models list          # List available providers

Use 'soulsystem <subcommand> --help' for details on any command.

Usage: soulsystem [OPTIONS] [COMMAND]

Commands:
  run         Run the AI agent
  onboard     Run interactive setup wizard (start here if new to SoulSystem)
  config      Manage app configuration settings
  tool        Manage WASM tools
  registry    Browse/install extensions
  channels    Manage channels
  routines    Manage routines
  mcp         Manage MCP servers
  memory      Manage workspace memory
  pairing     Manage DM pairing
  profile     Manage deployment profiles
  service     Manage OS service
  skills      Manage skills
  hooks       Manage lifecycle hooks
  models      Manage LLM providers and models
  doctor      Run diagnostics (check if everything is configured correctly)
  logs        View and manage gateway logs
  status      Show system status
  completion  Generate completions
  import      Import from other AI systems
  login       Authenticate with a provider (re-login)
  acp         Manage ACP agents
  help        Print this message or the help of the given subcommand(s)

Options:
      --cli-only
          Run in interactive CLI mode only (disable other channels)

      --no-db
          Skip database connection (for testing)

  -m, --message <MESSAGE>
          Single message mode - send one message and exit

  -c, --config <CONFIG>
          Configuration file path (optional, uses env vars by default)

      --no-onboard
          Skip first-run onboarding check

      --auto-approve
          Auto-approve tool execution (shell, file writes, HTTP, etc.)
          
          Skips interactive approval prompts for standard tools. Destructive operations still require explicit approval. Other safeguards remain active: rate limits, hooks, authentication gates.

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
